[package]
name = "renderer"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chromiumoxide = { version = "0.5", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tikv-jemallocator = "0.5"
bytes = "1.5"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "renderer"
path = "src/main.rs"
