[package]
name = "renderer"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
askama = "0.12"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
base64 = "0.21"
usvg = "0.38"
resvg = "0.38"
tiny-skia = "0.11"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tikv-jemallocator = "0.5"
bytes = "1.5"
thiserror = "1.0"
anyhow = "1.0"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
metrics-util = "0.16"
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[[bin]]
name = "renderer"
path = "src/main.rs"
