[package]
name = "keyword_matcher"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.4", default-features = false, features = ["napi4"] }
napi-derive = "2.16.3"
aho-corasick = "1.1.2"
lazy_static = "1.4.0"

[build-dependencies]
napi-build = "2.1.3"
